--- a/.github/workflows/CopyFIDOKey.yml
+++ b/.github/workflows/CopyFIDOKey.yml
@@ -26,9 +26,9 @@ jobs:
           git fetch origin gh-pages
           git checkout gh-pages
           # Copy the file from the main branch to the gh-pages branch
-          git checkout main -- EntraFIDOFinder/Assets/FidoKeys.json
-          mv EntraFidoFinder/Assets/FidoKeys.json Explorer/FidoKeys.json
+          git checkout main -- Assets/FidoKeys.json
+          mv Assets/FidoKeys.json Explorer/FidoKeys.json
           # Commit and push the changes
-          git add EntraFIDOFinder/Explorer/FidoKeys.json
+          git add Explorer/FidoKeys.json
           git commit -m "Update fidokeys.json from main branch"
           git push origin gh-pages
