Update workflow to trigger on completion of 'Main Entra Merge' instead of push or pull request events

--- a/.github/workflows/CopyFIDOKey.yml
+++ b/.github/workflows/CopyFIDOKey.yml
@@ -1,18 +1,12 @@
 name: Update FidoKeys in gh-pages
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - Assets/FidoKeys.json
-  pull_request:
-    branches:
-      - main
-    paths:
-      - Assets/FidoKeys.json
+  workflow_run:
+    workflows: ["Main Entra Merge"]
     types:
-      - closed
+      - completed
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
