--- a/.github/workflows/CopyFIDOKey.yml
+++ b/.github/workflows/CopyFIDOKey.yml
@@ -2,7 +2,7 @@ name: Update FidoKeys in gh-pages
 
 on:
   workflow_run:
-    workflows: ["Main Entra Merge"]
+    workflows: ["Main Merge"]
     types:
       - completed
     branches:
