Refactor GHMerge workflow to call Merge-GHFidoData function directly

--- a/.github/workflows/GHMerge.yml
+++ b/.github/workflows/GHMerge.yml
@@ -38,6 +38,7 @@ jobs:
         . ./Scripts/Test-GHAAGUIDExists.ps1
         . ./Scripts/Export-GHEntraFido.ps1
         . ./Scripts/Merge-GHFidoData.ps1
+        Merge-GHFidoData
 
     - name: Read Environment Variables
       shell: bash
