Enhance InvalidVendor issue handling by closing duplicates and validating status

--- a/.github/workflows/GHMerge.yml
+++ b/.github/workflows/GHMerge.yml
@@ -118,8 +118,8 @@ jobs:
             }
           }
 
-          // Check all InvalidVendor issues and close those that are now valid
-          console.log('Checking all InvalidVendor issues for validation status...');
+          // Check all InvalidVendor issues and close those that are now valid or are duplicates
+          console.log('Checking all InvalidVendor issues for validation status and duplicates...');
           const { data: invalidVendorIssues } = await github.rest.issues.listForRepo({
             owner: context.repo.owner,
             repo: context.repo.repo,
@@ -130,22 +130,36 @@ jobs:
           
           console.log(`Found ${invalidVendorIssues.length} open InvalidVendor issues`);
           
+          // Group issues by AAGUID to find duplicates
+          const issuesByAAGUID = {};
           for (const issue of invalidVendorIssues) {
-            // Extract AAGUID from issue title (format: "Invalid Vendor Detected for AAGUID <aaguid> : <vendor>")
             const aaguidMatch = issue.title.match(/AAGUID\s+([a-f0-9-]+)/i);
             if (aaguidMatch) {
               const aaguid = aaguidMatch[1];
-              console.log(`Checking AAGUID ${aaguid} from issue #${issue.number}`);
+              if (!issuesByAAGUID[aaguid]) {
+                issuesByAAGUID[aaguid] = [];
+              }
+              issuesByAAGUID[aaguid].push(issue);
+            }
+          }
+          
+          // Process each AAGUID group
+          for (const [aaguid, issues] of Object.entries(issuesByAAGUID)) {
+            console.log(`Checking AAGUID ${aaguid} with ${issues.length} issue(s)`);
+            
+            // Sort issues by creation date (oldest first)
+            issues.sort((a, b) => new Date(a.created_at) - new Date(b.created_at));
+            
+            // Find the key in FidoKeys.json
+            const key = fidoKeysData.keys.find(k => k.AAGUID === aaguid);
+            
+            if (key) {
+              console.log(`Found key: Vendor='${key.Vendor}', ValidVendor='${key.ValidVendor}'`);
               
-              // Find the key in FidoKeys.json
-              const key = fidoKeysData.keys.find(k => k.AAGUID === aaguid);
-              
-              if (key) {
-                console.log(`Found key: Vendor='${key.Vendor}', ValidVendor='${key.ValidVendor}'`);
-                
-                // Check if vendor is now valid
-                if (key.ValidVendor === 'Yes') {
-                  console.log(`Vendor is now valid for AAGUID ${aaguid}. Closing issue #${issue.number}`);
+              // Check if vendor is now valid - close ALL issues for this AAGUID
+              if (key.ValidVendor === 'Yes') {
+                console.log(`Vendor is now valid for AAGUID ${aaguid}. Closing all ${issues.length} issue(s)`);
+                for (const issue of issues) {
                   await github.rest.issues.update({
                     owner: context.repo.owner,
                     repo: context.repo.repo,
@@ -160,14 +174,31 @@ jobs:
                     body: `The vendor for key with AAGUID '${aaguid}' is now valid (Vendor: ${key.Vendor}). This issue is being closed automatically.`,
                   });
                   console.log(`Closed issue #${issue.number} for AAGUID: ${aaguid}`);
-                } else {
-                  console.log(`Vendor still invalid for AAGUID ${aaguid}. Keeping issue open.`);
+                }
+              } else if (issues.length > 1) {
+                // Vendor still invalid but we have duplicates - close all except the oldest
+                console.log(`Found ${issues.length} duplicate issues for AAGUID ${aaguid}. Keeping oldest (#${issues[0].number}), closing ${issues.length - 1} duplicates`);
+                for (let i = 1; i < issues.length; i++) {
+                  await github.rest.issues.update({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: issues[i].number,
+                    state: 'closed',
+                    state_reason: 'not_planned',
+                  });
+                  await github.rest.issues.createComment({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: issues[i].number,
+                    body: `Closing as duplicate. This issue is tracked in #${issues[0].number}`,
+                  });
+                  console.log(`Closed duplicate issue #${issues[i].number} for AAGUID: ${aaguid}`);
                 }
               } else {
-                console.log(`AAGUID ${aaguid} not found in FidoKeys.json`);
+                console.log(`Vendor still invalid for AAGUID ${aaguid}. Keeping issue #${issues[0].number} open.`);
               }
             } else {
-              console.log(`Could not extract AAGUID from issue title: ${issue.title}`);
+              console.log(`AAGUID ${aaguid} not found in FidoKeys.json`);
             }
           }
 
