Enhance FIDO Key Explorer UI and functionality
- Updated styles for improved aesthetics and responsiveness.
- Added new header section with database update and check timestamps.
- Implemented a statistics bar to display total keys and vendors.
- Enhanced filter section with dropdowns for bio, USB, NFC, BLE, and version.
- Improved table layout and added hover effects for better user experience.
- Refactored modal to display key details in a more organized manner.
- Updated JavaScript to fetch data and populate filters dynamically.
- Added functionality to filter table based on user input.
- Included new HTML files in .gitignore to prevent tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 merge_log.txt
 Scripts/Convert-FIDOKeyToStandardFormat.ps1
+DESIGN_OPTION_1_CARDS.html
+DESIGN_OPTION_2_ORGANIZED.html
+Explorer/index_updated.html
