Add start-server.sh to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Scripts/Convert-FIDOKeyToStandardFormat.ps1
 DESIGN_OPTION_1_CARDS.html
 DESIGN_OPTION_2_ORGANIZED.html
 Explorer/index_updated.html
+start-server.sh
