Update .gitignore to exclude FIDO key change logs and comparison scripts

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ DESIGN_OPTION_1_CARDS.html
 DESIGN_OPTION_2_ORGANIZED.html
 Explorer/index_updated.html
 start-server.sh
+FIDO_KEY_CHANGES_2026-01-24_10-02-51.md
+FIDO_KEY_CHANGES_2026-01-24_10-14-06.md
+FIDO_KEY_CHANGES.md
+Scripts/Compare-DocsFIDOChanges.ps1
