--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ FIDO_KEY_CHANGES_2026-01-24_10-02-51.md
 FIDO_KEY_CHANGES_2026-01-24_10-14-06.md
 FIDO_KEY_CHANGES.md
 Scripts/Compare-DocsFIDOChanges.ps1
+.fido_diff_state.json
+FIDO_KEY_CHANGES_2026-01-24_10-25-54.md
+FIDO_SYNC_20260125_082419.md
+Scripts/COMPARE-DOCS-FIDO-CHANGES.md
+Scripts/Sync-FidoKeysWithDocs.ps1
