Update .gitignore to exclude FIDO_SYNC_20260125_115522.md

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ FIDO_KEY_CHANGES_2026-01-24_10-25-54.md
 FIDO_SYNC_20260125_082419.md
 Scripts/COMPARE-DOCS-FIDO-CHANGES.md
 Scripts/Sync-FidoKeysWithDocs.ps1
+FIDO_SYNC_20260125_115522.md
